--- a/BIM/src/main/resources/com/mycompany/bim/administrator.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/administrator.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="panePrimary" prefHeight="768.0" prefWidth="1366.0" stylesheets="@../../../css/administrator.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdministratorController">
+<AnchorPane id="panePrimary" prefHeight="768.0" prefWidth="1366.0" stylesheets="@../../../css/administrator.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdministratorController">
    <children>
       <AnchorPane id="paneSecondary" fx:id="paneMenu" disable="true" layoutX="-355.0" layoutY="15.0" prefHeight="727.0" prefWidth="342.0" stylesheets="@../../../css/administrator.css" visible="false">
          <children>
@@ -112,28 +112,28 @@
       </AnchorPane>
       <AnchorPane id="paneUsers" fx:id="paneUsers" disable="true" layoutX="33.0" layoutY="31.0" prefHeight="719.0" prefWidth="1305.0" stylesheets="@../../../css/administrator.css" visible="false">
          <children>
-            <Label layoutX="142.0" layoutY="215.0" text="Name">
+            <Label layoutX="127.0" layoutY="215.0" text="Name">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <Label layoutX="502.0" layoutY="215.0" text="Last Name">
+            <Label layoutX="487.0" layoutY="215.0" text="Last Name">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <Label layoutX="314.0" layoutY="375.0" text="Email">
+            <Label layoutX="384.0" layoutY="373.0" text="Email">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <Label layoutX="153.0" layoutY="485.0" prefHeight="30.0" prefWidth="97.0" text="Username">
+            <Label layoutX="138.0" layoutY="484.0" prefHeight="30.0" prefWidth="97.0" text="Username">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <Label layoutX="493.0" layoutY="484.0" prefHeight="30.0" prefWidth="130.0" text="Pasword">
+            <Label layoutX="485.0" layoutY="484.0" prefHeight="30.0" prefWidth="130.0" text="Pasword">
                <font>
                   <Font size="18.0" />
                </font></Label>
             <TextField fx:id="txtUserId" layoutX="307.0" layoutY="126.0" prefHeight="40.0" prefWidth="200.0" />
-            <Label fx:id="lblUserID" layoutX="314.0" layoutY="95.0" prefHeight="27.0" prefWidth="150.0" text="Search user by ID">
+            <Label fx:id="lblUserID" layoutX="328.0" layoutY="98.0" prefHeight="27.0" prefWidth="150.0" text="Search user by ID">
                <font>
                   <Font size="18.0" />
                </font></Label>
@@ -180,13 +180,13 @@
             <Button fx:id="btnModifyUser" disable="true" layoutX="116.0" layoutY="636.0" mnemonicParsing="false" onAction="#clickModifyUser" prefHeight="40.0" prefWidth="583.0" styleClass="buttonBlue" text="Modify" visible="false" />
             <Button fx:id="btnAddUser" disable="true" layoutX="116.0" layoutY="636.0" mnemonicParsing="false" onAction="#clickAddUser" prefHeight="40.0" prefWidth="583.0" styleClass="buttonBlue" text="Add" visible="false" />
             <Button fx:id="btnDeleteUser" disable="true" layoutX="116.0" layoutY="636.0" mnemonicParsing="false" onAction="#clickDeleteUser" prefHeight="40.0" prefWidth="583.0" styleClass="buttonBlue" text="Delete" visible="false" />
-            <Button fx:id="btnSearchUser" layoutX="532.0" layoutY="126.0" mnemonicParsing="false" onAction="#clickSearchUser" prefHeight="40.0" prefWidth="70.0" styleClass="buttonBlue" text="Search" />
+            <Button fx:id="btnSearchUser" layoutX="526.0" layoutY="131.0" mnemonicParsing="false" onAction="#clickSearchUser" prefHeight="27.0" prefWidth="70.0" styleClass="buttonBlue" text="Search" />
          </children>
       </AnchorPane>
-      <AnchorPane id="paneTertiary" fx:id="paneProyects" disable="true" layoutX="42.0" layoutY="31.0" prefHeight="711.0" prefWidth="1295.0" stylesheets="@../../../css/administrator.css">
+      <AnchorPane id="paneTertiary" fx:id="paneProyects" disable="true" layoutX="42.0" layoutY="31.0" prefHeight="711.0" prefWidth="1295.0" stylesheets="@../../../css/administrator.css" visible="false">
          <children>
             <TextField fx:id="txtDesignerID" layoutX="432.0" layoutY="413.0" prefHeight="40.0" prefWidth="200.0" />
-            <Label fx:id="lblProyectCode" layoutX="244.0" layoutY="152.0" prefHeight="27.0" prefWidth="202.0" text="Search Proyect By Code" textFill="WHITE">
+            <Label fx:id="lblProyectCode" layoutX="244.0" layoutY="150.0" prefHeight="27.0" prefWidth="202.0" text="Search Proyect By Code" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font></Label>
@@ -211,7 +211,7 @@
                   <Font size="18.0" />
                </font></Label>
             <TextField fx:id="txtProyectName" layoutX="241.0" layoutY="303.0" prefHeight="40.0" prefWidth="200.0" />
-            <TextField fx:id="txtProyectId" layoutX="236.0" layoutY="186.0" prefHeight="40.0" prefWidth="200.0" />
+            <TextField fx:id="txtProyectId" layoutX="245.0" layoutY="189.0" prefHeight="40.0" prefWidth="200.0" />
             <DatePicker fx:id="dtpStartDate" layoutX="126.0" layoutY="547.0" prefHeight="40.0" prefWidth="200.0" />
             <DatePicker fx:id="dtpFinishDate" layoutX="433.0" layoutY="546.0" prefHeight="40.0" prefWidth="200.0" />
             <TextField fx:id="txtEngineerID" layoutX="127.0" layoutY="413.0" prefHeight="40.0" prefWidth="200.0" />
@@ -226,7 +226,7 @@
                      </image>
                   </ImageView>
                </graphic></Button>
-            <Button fx:id="btnSearchProyect" layoutX="458.0" layoutY="194.0" mnemonicParsing="false" onAction="#clickSearchProyect" styleClass="buttonBlue" text="Search" />
+            <Button fx:id="btnSearchProyect" layoutX="461.0" layoutY="194.0" mnemonicParsing="false" onAction="#clickSearchProyect" styleClass="buttonBlue" text="Search" />
          </children>
       </AnchorPane>
       <AnchorPane id="paneQuaternary" fx:id="paneHome" layoutX="22.0" layoutY="31.0" prefHeight="708.0" prefWidth="1314.0" stylesheets="@../../../css/administrator.css">
