--- a/BIM/src/main/resources/com/mycompany/bim/engineer.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/engineer.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="panePrimary" prefHeight="750.0" prefWidth="1350.0" stylesheets="@../../../css/engineer.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EngineerController">
+<AnchorPane id="panePrimary" prefHeight="750.0" prefWidth="1350.0" stylesheets="@../../../css/engineer.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EngineerController">
    <children>
       <AnchorPane id="paneSecondary" fx:id="paneEngineerOptions" prefHeight="750.0" prefWidth="300.0">
          <children>
@@ -74,7 +74,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Label layoutX="60.0" layoutY="602.0" text="Generate report">
+            <Label layoutX="60.0" layoutY="602.0" text="Generate Report">
                <font>
                   <Font size="24.0" />
                </font>
@@ -142,7 +142,7 @@
                   <Font size="24.0" />
                </font>
             </TextField>
-            <Label layoutX="109.0" layoutY="76.0" text="Code:">
+            <Label layoutX="111.0" layoutY="76.0" text="Code:">
                <font>
                   <Font size="20.0" />
                </font>
@@ -377,12 +377,19 @@
                 <TableColumn fx:id="columnProyectEndDate" prefWidth="92.800048828125" text="End date" />
               </columns>
             </TableView>
-            <Label layoutX="54.0" layoutY="7.0" text="Proyect List">
+            <Label layoutX="14.0" layoutY="3.0" text="Proyect List">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Button fx:id="btnSwitchTblv" layoutX="283.0" layoutY="12.0" mnemonicParsing="false" onAction="#clikSwitchTblv" text="-&gt;" />
+            <Button fx:id="btnSwitchTblv" layoutX="282.0" layoutY="7.0" mnemonicParsing="false" onAction="#clikSwitchTblv" prefHeight="26.0" prefWidth="76.0" styleClass="buttonGreen">
+               <graphic>
+                  <ImageView fitHeight="17.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../images/twoArrowsWhite.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
             <TableView fx:id="tblvUserList" disable="true" layoutX="10.0" layoutY="43.0" onMouseClicked="#clickGetUserId" prefHeight="549.0" prefWidth="352.0" visible="false">
                <columns>
                   <TableColumn fx:id="columnUserId" prefWidth="112.0" text="Identification" />
@@ -481,8 +488,8 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <ImageView fx:id="imvArchitecturalPlant" fitHeight="315.5" fitWidth="454.5" layoutX="27.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="imvStructuralPlant" fitHeight="315.5" fitWidth="454.5" layoutX="533.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="imvArchitecturalPlant" fitHeight="315.5" fitWidth="454.5" layoutX="30.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="imvStructuralPlant" fitHeight="315.5" fitWidth="454.5" layoutX="530.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </AnchorPane>
    </children>
