--- a/BIM/src/main/resources/com/mycompany/bim/logIn.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/logIn.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="paneLogIn" prefHeight="750.0" prefWidth="1350.0" stylesheets="@../../../css/logIn.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LogInController">
+<AnchorPane id="paneLogIn" prefHeight="750.0" prefWidth="1350.0" stylesheets="@../../../css/logIn.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LogInController">
    <children>
-      <AnchorPane id="paneSingIn" fx:id="paneSingIn" layoutX="524.0" layoutY="251.0" prefHeight="230.0" prefWidth="310.0">
+      <AnchorPane id="paneSingIn" fx:id="paneSingIn" layoutX="520.0" layoutY="342.0" prefHeight="230.0" prefWidth="310.0">
          <children>
             <Label layoutX="43.0" layoutY="20.0" prefHeight="20.0" prefWidth="193.0" text="Username or email address" textFill="WHITE">
                <font>
@@ -39,7 +39,7 @@
             <TextField fx:id="txtShowLoginPassword" layoutX="36.0" layoutY="115.0" prefHeight="33.0" prefWidth="194.0" visible="false" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="paneNewToBIM" layoutX="570.0" layoutY="481.0" prefHeight="66.0" prefWidth="217.0">
+      <AnchorPane fx:id="paneNewToBIM" layoutX="566.0" layoutY="572.0" prefHeight="66.0" prefWidth="217.0">
          <children>
             <Label id="labCreateAccount" layoutX="94.0" layoutY="27.0" onMouseClicked="#clickCreateAccount" prefHeight="20.0" prefWidth="121.0" text="Create an account" textFill="#0084ff">
                <font>
@@ -51,11 +51,11 @@
                </font></Label>
          </children>
       </AnchorPane>
-      <Label layoutX="624.0" layoutY="203.0" prefHeight="22.0" prefWidth="108.0" text="Sign in to BIM" textFill="WHITE">
+      <Label layoutX="620.0" layoutY="294.0" prefHeight="22.0" prefWidth="108.0" text="Sign in to BIM" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font></Label>
-      <AnchorPane id="paneSingUp" fx:id="paneSingUp" disable="true" layoutX="515.0" layoutY="138.0" prefHeight="473.0" prefWidth="328.0" visible="false">
+      <AnchorPane id="paneSingUp" fx:id="paneSingUp" disable="true" layoutX="511.0" layoutY="233.0" prefHeight="473.0" prefWidth="328.0" visible="false">
          <children>
             <Label layoutX="53.0" layoutY="208.0" text="Username" textFill="WHITE">
                <font>
@@ -130,5 +130,10 @@
             </RadioButton>
          </children>
       </AnchorPane>
+      <ImageView fitHeight="230.0" fitWidth="238.0" layoutX="556.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/logo.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
