--- a/BIM/src/main/resources/com/mycompany/bim/administrator.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/administrator.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="panePrimary" prefHeight="768.0" prefWidth="1366.0" stylesheets="@../../../css/administrator.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdministratorController">
+<AnchorPane id="paneQuaternary" prefHeight="768.0" prefWidth="1366.0" stylesheets="@../../../css/administrator.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdministratorController">
    <children>
       <AnchorPane id="paneSecondary" fx:id="paneMenu" disable="true" layoutX="-355.0" layoutY="15.0" prefHeight="727.0" prefWidth="342.0" stylesheets="@../../../css/administrator.css" visible="false">
          <children>
@@ -229,13 +229,13 @@
             <Button fx:id="btnSearchProyect" layoutX="461.0" layoutY="194.0" mnemonicParsing="false" onAction="#clickSearchProyect" styleClass="buttonBlue" text="Search" />
          </children>
       </AnchorPane>
-      <AnchorPane id="paneQuaternary" fx:id="paneHome" layoutX="22.0" layoutY="31.0" prefHeight="708.0" prefWidth="1314.0" stylesheets="@../../../css/administrator.css">
+      <AnchorPane id="panePrimary" fx:id="paneHome" layoutX="22.0" layoutY="31.0" prefHeight="708.0" prefWidth="1314.0" stylesheets="@../../../css/administrator.css">
          <children>
-            <Label layoutX="268.0" layoutY="146.0" prefHeight="80.0" prefWidth="235.0" text="Welcome!" textFill="WHITE">
+            <Label alignment="CENTER" layoutX="268.0" layoutY="146.0" prefHeight="80.0" prefWidth="235.0" text="Welcome!" textFill="WHITE">
                <font>
                   <Font size="44.0" />
                </font></Label>
-            <Label fx:id="lblName" layoutX="184.0" layoutY="266.0" prefHeight="80.0" prefWidth="168.0" text="&quot;Name&quot;" textFill="WHITE">
+            <Label fx:id="lblName" alignment="CENTER" layoutX="168.0" layoutY="266.0" prefHeight="80.0" prefWidth="200.0" text="&quot;Name&quot;" textFill="WHITE">
                <font>
                   <Font size="34.0" />
                </font>
@@ -248,7 +248,7 @@
                   <TableColumn fx:id="columnFinishDate" prefWidth="148.0" text="Finish Date" />
               </columns>
             </TableView>
-            <Label fx:id="lblLastName" layoutX="352.0" layoutY="266.0" prefHeight="80.0" prefWidth="235.0" text="&quot;LastName&quot;" textFill="WHITE">
+            <Label fx:id="lblLastName" alignment="CENTER" layoutX="385.0" layoutY="266.0" prefHeight="80.0" prefWidth="235.0" text="&quot;LastName&quot;" textFill="WHITE">
                <font>
                   <Font size="34.0" />
                </font>
