--- a/BIM/src/main/resources/com/mycompany/bim/designer.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/designer.fxml
@@ -22,7 +22,7 @@
             <Font size="14.0" />
          </font>
       </Button>
-      <ScrollPane focusTraversable="false" layoutX="1045.0" layoutY="101.0" prefHeight="547.0" prefWidth="290.0" vvalue="1.0">
+      <ScrollPane focusTraversable="false" layoutX="1045.0" layoutY="101.0" prefHeight="547.0" prefWidth="290.0">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1635.0" prefWidth="270.0">
                <children>
