--- a/BIM/src/main/resources/com/mycompany/bim/engineer.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/engineer.fxml
@@ -350,18 +350,23 @@
                               <Font size="9.0" />
                            </font>
                         </Label>
+                        <Label alignment="CENTER" layoutX="280.0" layoutY="201.0" prefHeight="18.0" prefWidth="132.0" styleClass="labelBlackRegular" text="Block" />
+                        <Label alignment="CENTER" layoutX="288.0" layoutY="699.0" prefHeight="18.0" prefWidth="132.0" styleClass="labelBlackRegular" text="8 rods" />
+                        <Label alignment="CENTER" layoutX="50.0" layoutY="251.0" prefHeight="18.0" prefWidth="132.0" styleClass="labelBlackRegular" text="Wood" />
+                        <Label alignment="CENTER" layoutX="50.0" layoutY="429.0" prefHeight="18.0" prefWidth="132.0" styleClass="labelBlackRegular" text="Sand" />
+                        <Label alignment="CENTER" layoutX="50.0" layoutY="220.0" prefHeight="18.0" prefWidth="132.0" styleClass="labelBlackRegular" text="1m, 0.9m, 0.8m" />
                      </children>
                   </AnchorPane>
                </content>
             </ScrollPane>
          </children>
       </AnchorPane>
-      <Label fx:id="lblMessage" layoutX="423.0" layoutY="224.0" text="Wellcome back">
+      <Label fx:id="lblMessage" layoutX="456.0" layoutY="224.0" text="Wellcome back">
          <font>
             <Font size="50.0" />
          </font>
       </Label>
-      <Label fx:id="lblEngineerName" alignment="CENTER" layoutX="373.0" layoutY="298.0" prefHeight="74.0" prefWidth="250.0" text="...">
+      <Label fx:id="lblEngineerName" alignment="CENTER" layoutX="383.0" layoutY="298.0" prefHeight="74.0" prefWidth="250.0" text="...">
          <font>
             <Font size="50.0" />
          </font>
@@ -377,12 +382,12 @@
                 <TableColumn fx:id="columnProyectEndDate" prefWidth="92.800048828125" text="End date" />
               </columns>
             </TableView>
-            <Label layoutX="14.0" layoutY="3.0" text="Proyect List">
+            <Label layoutX="14.0" layoutY="3.0" text="Proyects/Users">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Button fx:id="btnSwitchTblv" layoutX="282.0" layoutY="7.0" mnemonicParsing="false" onAction="#clikSwitchTblv" prefHeight="26.0" prefWidth="76.0" styleClass="buttonGreen">
+            <Button fx:id="btnSwitchTblv" layoutX="213.0" layoutY="7.0" mnemonicParsing="false" onAction="#clikSwitchTblv" prefHeight="30.0" prefWidth="145.0" styleClass="buttonGreen" text="Switch Table">
                <graphic>
                   <ImageView fitHeight="17.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -492,7 +497,7 @@
             <ImageView fx:id="imvStructuralPlant" fitHeight="315.5" fitWidth="454.5" layoutX="530.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </AnchorPane>
-      <Label fx:id="lblEngineerLastName" alignment="CENTER" layoutX="655.0" layoutY="298.0" prefHeight="74.0" prefWidth="250.0" text="...">
+      <Label fx:id="lblEngineerLastName" alignment="CENTER" layoutX="654.0" layoutY="298.0" prefHeight="74.0" prefWidth="250.0" text="...">
          <font>
             <Font size="50.0" />
          </font>
