--- a/BIM/src/main/resources/com/mycompany/bim/engineer.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/engineer.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="panePrimary" prefHeight="750.0" prefWidth="1350.0" stylesheets="@../../../css/engineer.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EngineerController">
+<AnchorPane id="panePrimary" prefHeight="750.0" prefWidth="1350.0" stylesheets="@../../../css/engineer.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EngineerController">
    <children>
       <AnchorPane id="paneSecondary" fx:id="paneEngineerOptions" prefHeight="750.0" prefWidth="300.0">
          <children>
@@ -98,7 +98,7 @@
                   <Font size="34.0" />
                </font>
             </Label>
-            <DatePicker fx:id="dateStartProyect" layoutX="111.0" layoutY="376.0" prefHeight="55.0" prefWidth="175.0" />
+            <DatePicker fx:id="dtpStartDate" layoutX="111.0" layoutY="376.0" prefHeight="55.0" prefWidth="175.0" />
             <TextField fx:id="txtProyectEngineer" editable="false" layoutX="111.0" layoutY="238.0" prefHeight="55.0" prefWidth="175.0">
                <font>
                   <Font size="24.0" />
@@ -109,7 +109,7 @@
                   <Font size="24.0" />
                </font>
             </TextField>
-            <DatePicker fx:id="dateEndProyect" layoutX="348.0" layoutY="376.0" prefHeight="55.0" prefWidth="175.0" />
+            <DatePicker fx:id="dtpEnnDate" layoutX="348.0" layoutY="376.0" prefHeight="55.0" prefWidth="175.0" />
             <Label layoutX="348.0" layoutY="76.0" text="Name:">
                <font>
                   <Font size="20.0" />
